fixed the navbar spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ body {
 
 nav {
     background-image: linear-gradient(to right, rgba(18, 70, 112, 0.719), rgba(62, 117, 163, 0.507));
-    padding: 5px 10px 5px 10px;
+    padding: 5px 15px 5px 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 10px;
+    gap: 100px;
     /* position: sticky; */
     /* top: 0px; */
     width: 100%;
@@ -31,7 +31,7 @@ nav {
     gap: 10px;
     align-items: center;
     justify-content: space-between;  
-    margin-right: 100px;  
+    /* margin-right: 100px;   */
     color: white;
 }
 
@@ -56,13 +56,13 @@ nav {
 
 .menu-right {
     display: flex;
-    gap: 10px;
+    gap: 120px;
     align-items: center;
     justify-content: space-between;    
 }
 
 .links {
-    margin-right: 200px;
+    /* margin-right: 200px; */
 }
 
 .menu-links {
@@ -112,7 +112,7 @@ img:hover {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    background: rgba(140, 158, 192, 0.3);
+    background: rgba(0, 0, 0, 0.1);
     color: black;
 }
 
